--- a/src/pages/release-manage/release-manage.html
+++ b/src/pages/release-manage/release-manage.html
@@ -23,15 +23,15 @@
                     <form>
                         <div class="search-from form-group">
                             <label>学校名称：</label>
-                            <input type="text" class="from-controller" name="SSK" id="schName" placeholder="请输入学校名称" aria-describedby="sizing-addon2">
+                            <input type="text" class="from-controller" name="SSK" id="select-input-schName" placeholder="请输入学校名称" aria-describedby="sizing-addon2">
                         </div>
                         <div  class="search-from form-group">
                             <label>专业名称：</label>
-                            <input type="text" class="from-controller" name="SSK" id="majName" placeholder="请输入专业名称">
+                            <input type="text" class="from-controller" name="SSK" id="select-input-majName" placeholder="请输入专业名称">
                         </div>
                         <div class="search-from form-group">
                             <label>省份：</label>
-                            <input type="text" class="from-controller" name="SSK" id="proName" placeholder="请选择省份">
+                            <input type="text" class="from-controller" name="SSK" id="select-input-proName" placeholder="请选择省份">
                         </div>
                     </form>
                 </div>
@@ -72,7 +72,7 @@
                         <div class="form-group">
                             <label class="col-sm-3 control-label ">下线时间：</label>
                             <div class="col-sm-9">
-                                <input type="text" class="form-control" id="offlinetime" placeholder="请选择下线时间">
+                                <input type="text" class="form-control" id="update-input-offlinetime" placeholder="请选择下线时间">
                                 <span class="alert-warn"></span>
                             </div>
                         </div>
