10-24-添加删除确认-yueben

--- a/src/pages/release-manage/release-manage.html
+++ b/src/pages/release-manage/release-manage.html
@@ -11,11 +11,12 @@
     <title>发布管理</title>
 </head>
 <body>
+<ol class="breadcrumb">
+    <li><a href="#">后台管理系统</a></li>
+    <li class="active">发布管理</li>
+</ol>
 <!--发布管理 刘志杰 2018-10-10 -->
 <div class="content-box">
-    <div class="header-section">
-        <div class="title-header">发布管理</div>
-    </div>
     <div class="content-section">
             <div class="h3">信息查询</div>
             <div class="search-content">
