--- a/src/pages/matriculate-manage/matriculate-manage.html
+++ b/src/pages/matriculate-manage/matriculate-manage.html
@@ -76,9 +76,9 @@
                     <div class="col-xs-12 form-horizontal" id="open-dialog">
                         <input type="hidden" id="modal-input-key">
                         <div class="form-group">
-                            <label class="col-sm-3 control-label required">录取时间：</label>
+                            <label class="col-sm-3 control-label ">录取时间：</label>
                             <div class="col-sm-9">
-                                <input type="text" class="form-control need-check not-null" id="matriculate-input-admissiontime"
+                                <input type="text" class="form-control" id="matriculate-input-admissiontime"
                                        placeholder="录取时间">
 
                                 <span class="alert-warn"></span>
